Added logging to file support

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 **/__pycache__/
 # We probably don't want to track the database file itself.
 app.db
+# We certainly don't want to track log files
+**/*.log
