Modified environmental variables files

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
+# Environmental variables for Microblog
+# Define secret key
+SECRET_KEY = <your-own-key>
+# Define mail server parameters here
+MAIL_SERVER=<server-address>
+MAIL_PORT=<server-port>
 # Define your API keys here
 MS_TRANSLATOR_KEY=<paste-your-key-here>
+MS_TRANSLATOR_LOCATION=<write-your-region-here>
