--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,15 @@ aiosmtpd==1.4.6
 alembic==1.16.5
 atpublic==6.0.2
 attrs==25.3.0
+babel==2.17.0
 blinker==1.9.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
 click==8.3.0
 dnspython==2.8.0
 email-validator==2.3.0
 Flask==3.1.2
+flask-babel==4.0.0
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
@@ -17,12 +21,17 @@ greenlet==3.2.4
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+langdetect==1.0.9
 Mako==1.3.10
 MarkupSafe==3.0.2
 packaging==25.0
 PyJWT==2.10.1
 python-dotenv==1.1.1
+pytz==2025.2
+requests==2.32.5
+six==1.17.0
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
+urllib3==2.5.0
 Werkzeug==3.1.3
 WTForms==3.2.1
