--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.3.0
 dnspython==2.8.0
+elastic-transport==9.1.0
+elasticsearch==9.1.1
 email-validator==2.3.0
 Flask==3.1.2
 flask-babel==4.0.0
@@ -26,6 +28,7 @@ Mako==1.3.10
 MarkupSafe==3.0.2
 packaging==25.0
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 requests==2.32.5
