--- a/babel.cfg
+++ b/babel.cfg
@@ -1,3 +1,3 @@
-[python: app/**.py]
+[python: app/**/**.py]
 [jinja2: app/templates/**.html]
-[jinja2: app/**/templates/**.html]
+[jinja2: app/**/templates/**/**.html]
