--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,14 @@ click==8.3.0
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
+defusedxml==0.7.1
 dnspython==2.8.0
 elastic-transport==9.1.0
 elasticsearch==9.1.1
 email-validator==2.3.0
 Flask==3.1.2
 flask-babel==4.0.0
+Flask-HTTPAuth==4.8.0
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
@@ -26,21 +28,30 @@ Flask-Moment==1.0.6
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 greenlet==3.2.4
+httpie==3.2.4
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 kombu==5.5.4
 langdetect==1.0.9
 Mako==1.3.10
+markdown-it-py==4.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
+multidict==6.7.0
 packaging==25.0
 prompt_toolkit==3.0.52
+Pygments==2.19.2
 PyJWT==2.10.1
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 redis==6.4.0
 requests==2.32.5
+requests-toolbelt==1.0.0
+rich==14.1.0
+setuptools==80.9.0
 six==1.17.0
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
